[package]
name = "eventservice"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cloud-pubsub = "0.7.0"
tokio={ version="*", features=["full",] }
chrono = "*"
serde = {version = "1.0.0", features=["derive",]}
sled = "*"
serde_json = "*"
tokio-test = "*"
futures = "*"